vpc_internet_gateway.tf
resource "aws_internet_gateway" "example" {
  vpc_id = aws_vpc.example.id
  tags = {
    Name = "internet_gateway_example"
  }
}
